docs: Swagger 문서화 애노테이션 추가
- NotionController
- NotionTokenRequest
- NotionTokenResponse

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,12 @@ spring:
     name: Review-app
   profiles:
     include: secret
+springdoc:
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+  api-docs:
+    path: /v3/api-docs
+    enabled: true
+#  packages-to-scan: 문서화할 패키지 지정 (최적화/속도 개선)
+
