feat: Page 조회 기능 추가 및 코드 리팩토링
access_token으로 select page 조회 성공
- query는 null로 줘야 전체 조회가 된다
- page_id 찾는게 목적 ( page 내부 텍스트를 전부 뽑아내기 위함 )

front와 연결을 위해 cors 설정

camelcase -> snakecase 로 바꾸기 위해 yml 파일 설정, config 파일에 objectmapper 설정해봄
- 결과적으로 둘 다 적용 안 됐음 -> record type 이라 적용 안되는 현상이 있다고 함
- 적용되는 건 @JsonProperty, @JsonNaming(PropertyNamingStrategies.SnakeCaseStrategy.class) 두가지 방법은 적용됨

예외 처리 래핑 메서드 적용
- 반복되는 try-catch 보기좋게 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,9 @@ spring:
     name: Review-app
   profiles:
     include: secret
+#  #적용안됨;;
+#  jackson:
+#    property-naming-strategy: SNAKE_CASE
 springdoc:
   swagger-ui:
     enabled: true
